--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
-[o] <format=hex>
+[x] <format=hex>
 
-[ ] Add <read=ReadFAT16_CLUSTERINFO> to show hex for special values
+[x] Add <read=ReadFAT16_CLUSTERINFO> to show hex for special values
 [ ] Add <read=ReadFAT32_CLUSTERINFO> to show hex for special values
 
 [ ] If two FATs exist, highlight non-matching entries in RED
