Add <read=ReadFAT32_CLUSTERINFO> to show hex for special values. Continue to show decimal for values that are (may be) part of a FAT chain, to simplify manually following the FAT chain.
Also, rename "USED_LAST_CLUSTER_xxxx" to "END_OF_CHAIN_xxxx",
as it more accurately reflects the purpose of the value, which
is to mark the end of a FAT chain in the FAT.

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 [x] <format=hex>
 
 [x] Add <read=ReadFAT16_CLUSTERINFO> to show hex for special values
-[ ] Add <read=ReadFAT32_CLUSTERINFO> to show hex for special values
+[x] Add <read=ReadFAT32_CLUSTERINFO> to show hex for special values
 
 [ ] If two FATs exist, highlight non-matching entries in RED
 
